k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      containers:
      - name: service-a
        image: nginx:alpine
        ports:
        - containerPort: 80
