k8s/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v2
  template:
    metadata:
      labels:
        app: service-a
        version: v2
    spec:
      containers:
      - name: service-a
        image: nginx:alpine
        ports:
        - containerPort: 80
